2008-01-20  Robert Schuster  <robertschuster@fsfe.org>

	* configure.ac: Require automake 1.9 instead of 1.10.

2008-01-20  Dalibor Topic  <robilad@kaffe.org>

	TODO: Updated.

2008-01-20  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Autoupdated. Now requires autoconf 2.61.

2008-01-20  Dalibor Topic  <robilad@kaffe.org>

	* developers/autogen.sh: Removed version checking logic.
	We should simply set the minimum versions necessary in configure.ac.

2008-01-20  Dalibor Topic  <robilad@kaffe.org>

	* m4/libtool.m4: Removed.

2008-01-20  Dalibor Topic  <robilad@kaffe.org>

	* developers/autogen.sh: Replaced the complicated 
	invocations of autotools with a single autoreconf call.

2008-01-20  Dalibor Topic  <robilad@kaffe.org>

	TODO: Updated.

2008-01-20  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/xprof/Makefile.am (AM_CPPFLAGS),
	* kaffe/jvmpi/Makefile.am (AM_CPPFLAGS), 
	* kaffe/kaffevm/Makefile.am (AM_CPPFLAGS), 
	* test/jni/Makefile.am (AM_CPPFLAGS),
	* kaffe/kaffe/Makefile.am (AM_CPPFLAGS): 
	Removed libltdl from include path.
	
2008-01-19  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Updated.

2008-01-19  Dalibor Topic  <robilad@kaffe.org>

	* WHATSNEW: Document purge of libltdl.
	* FAQ/FAQ.required-libraries: Add information on libltdl.

2008-01-19  Dalibor Topic  <robilad@kaffe.org>

	* developers/config2.patch: Removed.

	* Makefile.am (EXTRA_DIST): Removed developers/config2.patch.

2008-01-19  Dalibor Topic  <robilad@kaffe.org>

	* developers/autogen.sh: Don't libtoolize with --ltdl. Removed workarounds
	and patches for libltdl.

	* libltdl/COPYING.LIB, libltdl/Makefile.am, libltdl/Makefile.in,
	libltdl/README, libltdl/acinclude.m4, libltdl/aclocal.m4, libltdl/config-h.in,
	libltdl/config.guess, libltdl/config.sub, libltdl/configure, 
	libltdl/configure.ac, libltdl/install-sh, libltdl/ltdl.c, libltdl/ltdl.h,
	libltdl/ltmain.sh libltdl/missing: Removed.

	* configure.ac: (AC_LIBLTDL_CONVENIENCE, LIBTOOL_DEPS, LIBLTDL) 